# DjinniExperimentalVersionCmakeTest

./: .gitmodules  CMakeLists.txt  README.md  run_cmake_ios.sh  run_djinni.sh
android_project/DjinniCmakeExampleAndroid/app/: build.gradle  proguard-rules.pro
android_project/DjinniCmakeExampleAndroid/app/externalNativeBuild/cmake/debug/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
android_project/DjinniCmakeExampleAndroid/app/externalNativeBuild/cmake/debug/armeabi/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
android_project/DjinniCmakeExampleAndroid/app/externalNativeBuild/cmake/debug/armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
android_project/DjinniCmakeExampleAndroid/app/externalNativeBuild/cmake/debug/mips/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
android_project/DjinniCmakeExampleAndroid/app/externalNativeBuild/cmake/debug/mips64/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
android_project/DjinniCmakeExampleAndroid/app/externalNativeBuild/cmake/debug/x86/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
android_project/DjinniCmakeExampleAndroid/app/src/main/: AndroidManifest.xml
android_project/DjinniCmakeExampleAndroid/app/src/main/cpp/: CMakeLists.txt
android_project/DjinniCmakeExampleAndroid/gradle/wrapper/: gradle-wrapper.properties
cmake/install/ios/OS/lib/: libdjinni.dylib
cmake/install/ios/OS/lib/djinni.framework/: djinni
cmake/install/ios/SIMULATOR/lib/: libdjinni.dylib
cmake/install/ios/SIMULATOR/lib/djinni.framework/: djinni
cmake/install/ios/SIMULATOR64/lib/: libdjinni.dylib
cmake/install/ios/SIMULATOR64/lib/djinni.framework/: djinni
djinni/: helloworld.djinni
generated-src/cpp/: HelloWorld.hpp
generated-src/java/com/example/djinnicmakeexample/: HelloWorld.java
generated-src/jni/: NativeHelloWorld.cpp  NativeHelloWorld.hpp
generated-src/objc/: DCHelloWorld+Private.h  DCHelloWorld+Private.mm  DCHelloWorld.h
ios_project/DjinniCmakeExampleiOS/: .gitignore  CMakeLists.txt
ios_project/DjinniCmakeExampleiOS/DjinniCmakeExampleiOS/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
ios_project/DjinniCmakeExampleiOS/DjinniCmakeExampleiOS.xcodeproj/: project.pbxproj
ios_project/DjinniCmakeExampleiOS/DjinniCmakeExampleiOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios_project/DjinniCmakeExampleiOS/DjinniCmakeExampleiOS.xcodeproj/project.xcworkspace/xcuserdata/bruno.coelho.xcuserdatad/: UserInterfaceState.xcuserstate
ios_project/DjinniCmakeExampleiOS/DjinniCmakeExampleiOS.xcodeproj/xcuserdata/bruno.coelho.xcuserdatad/xcschemes/: DjinniCmakeExampleiOS.xcscheme  xcschememanagement.plist
ios_project/DjinniCmakeExampleiOS/DjinniCmakeExampleiOS/Base.lproj/: Main.storyboard
ios_project/DjinniCmakeExampleiOS/DjinniCmakeExampleiOSTests/: DjinniCmakeExampleiOSTests.m
ios_project/DjinniCmakeExampleiOS/DjinniCmakeExampleiOSUITests/: DjinniCmakeExampleiOSUITests.m
src/main/cpp/: HelloWorldImpl.cpp  HelloWorldImpl.hpp
(+75 files in other folders)
